[project]
name = "rlm-claudette"
version = "0.1.0"
description = "A Recursive Language Model agent system built on claudette"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claudette>=0.3.13",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]
